--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "matchery",
   "version": "1.0.0",
   "scripts": {
-    "client": "cd matchery_client && yarn start",
-    "server": "nodemon server.js",
-    "dev": "concurrently --kill-others-on-fail \"yarn server\" \"yarn client\""
+    "start": "node server.js",
+	"heroku-postbuild": "cd matchery_client && npm install --only=dev && npm install && npm run build"
   },
   "dependencies": {
     "bcrypt": "^3.0.1",
+    "dotenv": "^6.1.0",
     "express": "^4.16.2",
     "express-validator": "^5.3.0",
     "mongoose": "^5.2.16",
@@ -15,5 +15,8 @@
   },
   "devDependencies": {
     "concurrently": "^3.5.0"
+  },
+  "engines": {
+    "node": "8.12.0"
   }
 }
