--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
   },
   "dependencies": {
     "bcrypt": "^3.0.1",
+    "dateformat": "^3.0.3",
     "express": "^4.16.2",
     "express-validator": "^5.3.0",
     "mongoose": "^5.2.16",
-    "node-pre-gyp": "^0.11.0"
+    "node-pre-gyp": "^0.11.0",
+    "timeago.js": "^4.0.0-beta.1"
   },
   "devDependencies": {
     "concurrently": "^3.5.0"
